<resources>
    <string name="app_name">IntentCommunicatorApp</string>
    <string name="title">Communicator App</string>
    <string name="choice">Choose action:</string>
    <string name="place_call">Call</string>
    <string name="phone_hint">Phone number</string>
    <string name="email">Email</string>
    <string name="email_hint">Email address</string>
    <string name="email_layout_title">Sending Email</string>
    <string name="email_subject_hint">Subject…</string>
    <string name="email_text_hint">Write your message…</string>
    <string name="sms">SMS</string>
    <string name="sms_hint">SMS number</string>
    <string name="sms_layout_title">Sending SMS Message</string>
    <string name="text_input_hint">Write your message…</string>
    <string name="send">Send</string>
</resources>