<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="80dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/choiceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@+id/callLinearLayout"
        app:layout_constraintBottom_toTopOf="@+id/callLinearLayout"/>

    <LinearLayout
        android:id="@+id/callLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/choiceTV"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/phone_hint"
            app:startIconDrawable="@drawable/phone"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberTextInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/callBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/place_call"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/button_call"
            android:stateListAnimator="@null"
            android:layout_weight="1"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/smsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/callLinearLayout"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/smsTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/sms_hint"
            app:startIconDrawable="@drawable/sms"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/smsTextInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/smsBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/sms"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/button_sms"
            android:stateListAnimator="@null"
            android:layout_weight="1"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/smsLinearLayout"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/email_hint"
            app:startIconDrawable="@drawable/email"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/emailBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/email"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_email"
            android:stateListAnimator="@null"
            android:layout_weight="1"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>